<resources>

    <string name="string_addpayment">Add Payment</string>
    <string name="Read_payment">Read payment</string>
    <string name="Editpayment">Edit payment</string>
    <string name="ecarddetails">Enter card Detals</string>
    <string name="selectpmethord">Select Payment method</string>
    <string name="cardnumber">Card Number</string>
    <string name="entercardnumber">Enter your card number</string>
    <string name="nameoncard">Name On Card</string>
    <string name="entercname">Enter your name on card</string>
    <string name="edate">Expiry Date</string>
    <string name="mmyy">MM/YY</string>
    <string name="ccvcode">CVC Code</string>
    <string name="cvc">CVC</string>
    <string name="visacard">Visa</string>
    <string name="masetrcard">Master</string>
    <string name="termscondi">I agree to Terms and Conditions</string>
    <string name="paynow">Pay Now</string>
    <string name="EnterCardLbl">Enter Card Details</string>
    <string name="paymentLbl">Please select payment method</string>
    <string name="CardNoLbl">Card Number</string>
    <string name="nameLbl">Name on Card</string>
    <string name="cardNo">1234567891234567</string>
    <string name="nameCard">Enter your name on card</string>
    <string name="exDateLbl">Expiry Date</string>
    <string name="exDateHint">MM / YY</string>
    <string name="CVCno">CVC</string>
    <string name="cvcLbl">CVC Code</string>
    <string name="rb1">I agree to Terms and Conditions</string>
    <string name="payButton">Pay Now</string>
    <string name="cardDetailsLbl">Your Card Details</string>
    <string name="cardnlabel">Card Number</string>
    <string name="chNamelbl">Card Holder\'s Name</string>
    <string name="expDateLabel">Expiry Date</string>
    <string name="cvcLabel">CVC Code</string>
    <string name="cancelButton">Cancel Order</string>
    <string name="buttonContinue">Continue</string>
    <string name="retrieveCardNoLbl"> </string>
    <string name="retrieveCardHname"> </string>
    <string name="exDateRead"> </string>
    <string name="CVCNoRead"> </string>
    <string name="successmsg">Payment Successful!</string>
    <string name="congratzlbl">Congratulation!</string>
    <string name="conflbl">Your Order is Confirmed.</string>
    <string name="emailsentLbl">Email has been sent with details.</string>
    <string name="homeBtn">Back to Home</string>
    <string name="viewBtn">View Order</string>
    <string name="cardNoHint">Enter your card number</string>
    <string name="updateBtn">UPDATE</string>
    <string name="bdeatils">Booking Details</string>
    <string name="btnContinue">Continue</string>
    <string name="bookingDetails">Your order is Confirmed</string>
    <string name="pickup_details">We will pick up you on :</string>
    <string name="datenTime">30 October 2022 at 10.00 AM</string>
    <string name="location">Colombo, Sri Lanka</string>
    <string name="vehicleName">Audi A6 2017</string>
    <string name="lblLocation">Colombo, Sri Lanka</string>
    <string name="lblPrice">Rs.18,000</string>
    <string name="lblPerDay">Per Day</string>
    <string name="reservation">Reservation</string>
    <string name="noOfBookingDays">Number of Booking Days</string>
    <string name="lblDays">2</string>
    <string name="pickupDate">Pick-up Date</string>
    <string name="dropOffLbl">Drop-off Date</string>
    <string name="timeLbl">Booking Time</string>
    <string name="DiscountLbl">Discount</string>
    <string name="totAmount">Total Amount</string>
    <string name="btnBooking">Place Order</string>
    <string name="pickUpDate">Sun, 30 October</string>
    <string name="dropOfDate">Tue, 01 November</string>
    <string name="timeBooking">10.00 AM</string>
    <string name="lblDis">-</string>
    <string name="TotalLbl">Rs.36,000</string>
    <string name="deletecard">Delete Card</string>
    <string name="submit">Submit</string>
    <string name="editcarddetails">Edit Card Details</string>


    <string name="app_name">CashMate</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="userName">User Name</string>
    <string name="keepMeLoggedIn">Keep Me Logged In</string>
    <string name="signIn">SIGN IN</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="createNewAccount">Create New Account</string>
    <string name="signUp">SIGN UP</string>
    <string name="myProfile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="editProfile">Edit Profile</string>
    <string name="structureOfExpenses">Structure of Expenses</string>
    <string name="foodAndDrinks">-Food And Drinks</string>
    <string name="shopping">Shopping</string>
    <string name="medicine">Medicine</string>
    <string name="transportation">Transportation</string>
    <string name="other">Other</string>
    <string name="report">Report</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="description">Budget and Expense</string>
    <string name="budget">Current Budget</string>
    <string name="expense">Current Expense</string>
    <string name="total">Total</string>
    <string name="title_activity_test">Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile_name">Indudini Thennakoon</string>
    <string name="profile_mail">indudinithennakoon@gmail.com</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">My Profile</string>
    <string name="menu_slideshow">Chart</string>
    <string name="piechart">Pie Chart</string>
    <string name="barchart">Bar Chart</string>
    <string name="charts">Charts</string>
    <string name="rupees">Rs.500</string>
    <string name="update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addincome">Add Expencess</string>
    <string name="Income_Amount">Amount</string>
    <string name="Category">Category</string>
    <string name="readincome">Read Expencess</string>
    <string name="Edit_income">Edit Expencess</string>
    <string name="Cancel">Cancel</string>
    <string name="editincome">Edit Expencess</string>
</resources>